--- a/views/login.html
+++ b/views/login.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- CSS File -->
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
 
 </head>
 
