--- a/static/style.css
+++ b/static/style.css
@@ -34,3 +34,10 @@ body {
     font-size: 20px;
     margin-top: 15px;
 }
+
+
+.nav-link:hover{
+    box-shadow: 1px 1px 20px  (0, 0, 0, 0.3);
+    transform: translateY(-5px);
+    transition: all 0.4s ease-in-out;
+}
