--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -18,7 +18,7 @@
 <nav class="navbar bg-transparent navbar-light p-3 navbar-expand-lg">
     <div class="container">
      
-        <a href="/blog" class="navbar-brand">WEB HOSTING CA.</a>
+        <a href="/" class="navbar-brand">WEB HOSTING CA.</a>
         <div class="navbar-brand">
             <a href="#" class="navbar-left">
               
